removed unnecessary js, fixed stickyness of navbar on smaller screens, some small css cleanup

--- a/public/darktheme.css
+++ b/public/darktheme.css
@@ -8,14 +8,6 @@
     background-color: transparent !important;
   }
 
-  nav {
-    background-color: rgba(255, 255, 255, 0) !important;
-  }
-
-  #navbar {
-    background-color: transparent !important;
-  }
-
   #navbar a {
     color: #f2f2f2 !important;
   }
