--- a/public/navbar.css
+++ b/public/navbar.css
@@ -12,28 +12,23 @@ header {
 }
 
 /* Style the navbar */
-nav {
-  margin-bottom: 10px;
-  margin: auto;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  font-family: "Open Sans", sans-serif;
-  font-weight: bold;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.9);
-}
 
 #navbar {
-  overflow: hidden;
   background-color: transparent;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 70vw;
   height: 40px;
   margin: auto;
   font-size: 1.35rem;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  margin: auto;
+  margin-bottom: 10px;
+}
+
+.fa-bars {
+  cursor: pointer;
 }
 
 /* Navbar links */
@@ -92,6 +87,8 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-transform: uppercase;
+  letter-spacing: 0.45rem;
 }
 
 /* When you mouse over the navigation links, change their color */
